# walk3r

./: .gitignore  Dockerfile  Makefile  Makefile.old  README.md  install.bat  install.sh  pyproject.toml  setup.py  walk3r.toml  walk3r.toml.example  walk3r.toml.old
app/: cli.py  cli_v2.py  complexity.py  config.py  db_compliance.py  db_detector.py  doc_coverage.py  exporter.py  go_walk3r.py  linker.py  metrics.py  scanner.py  summary.py
