[project]
name = "walk3r"
version = "0.1.1"
description = "Modular Python dependency mapping tool"
authors = [{ name = "Jay", email = "none@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "toml",
    "graphviz",        # if you're generating .dot/.svg
    "networkx",        # if you're doing graph work
    "rich",            # if you pretty-print to terminal
    "pathlib; python_version<'3.4'",  # pathlib is built-in from 3.4+
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
