[project]
name = "walk3r"
version = "2.0.0"
description = "Easy-to-use static analysis tool for non-programmers and AI assistant integration"
authors = [{ name = "Jay", email = "none@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "toml",
    "rich>=12.0.0",    # Enhanced terminal output and user interaction
    "graphviz",        # Graph visualization
    "networkx",        # Graph analysis
    "pathlib; python_version<'3.4'",  # pathlib is built-in from 3.4+
]

[project.scripts]
walk3r = "app.cli_v2:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
